--- a/CaseStudy_RarityNinja/package.json
+++ b/CaseStudy_RarityNinja/package.json
@@ -7,7 +7,6 @@
         "watch:sass": "node-sass sass/main.scss css/style.css -w",
         "devserver": "live-server",
         "start": "npm-run-all --parallel devserver watch:sass",
-        
         "compile:sass": "node-sass sass/main.scss css/style.comp.css",
         "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
         "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
@@ -24,6 +23,8 @@
         "postcss-cli": "^11.0.0"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
         "sass": "^1.71.0"
     }
 }
